--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!Doctype HTML> 
  	<html>
 	 	<head>
-			<title> Demon </title>
+			<title> <img src= "future.jpg" alt=Future height= "42" width= "42"> DEMON </title>
 		</head>
 		<body>
-	<h1> CHEES FRIES</h1>
+<h1> CHEES FRIES</h1>
 	<h2> SMELLY CAT WHAT ARE THEY FEEDING YOU </h2>
 	<a href:"htt://www.google.com"> TAKE ME TO YOUR LEADER </a>
 		</body>
