--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<body>
 <h1> CHEES FRIES</h1>
 	<h2> SMELLY CAT WHAT ARE THEY FEEDING YOU </h2>
-	<a href:"htt://www.google.com"> TAKE ME TO YOUR LEADER </a>
+	<a href:"http://www.google.com"> TAKE ME TO YOUR LEADER </a>
 		</body>
 
 	</html>
